[tool.poetry]
name = "toil"
version = '5.6.0a1'
description = "A scalable, efficient, cross-platform pipeline management system written entirely in Python and designed around the principles of functional programming."
authors = ["Benedict Paten and the Toil community"]
license = "Apache License 2.0"
readme = "README.rst"
homepage = "https://toil.ucsc-cgl.org/"
documentation = "https://toil.readthedocs.io/en/latest/"
repository = "https://github.com/DataBiosphere/toil"

[tool.poetry.dependencies]
python = "^3.8"
dill = ">=0.3.2, <0.4"
requests = ">=2, <3"
docker = ">=3.7.2, <6"
python-dateutil = "^2.8.2"
psutil = ">=3.0.1, <6"
addict = ">=2.2.1, <2.3"
pytz = ">=2012"
enlighten = ">=1.5.2, <2"

#Optional Dependencies AWS

boto = {version = ">=2.48.0, <3", optional = true}
boto3 = {version = ">=1.17, <2", optional = true}
boto3-stubs = {version = ">=1.17, <2", optional = true}
futures = {version = ">=3.1.1, <4", optional = true}

#Optional Dependencies CWL

cwltool = {version= "==3.1.20211020155521", optional = true}
galaxy-tool-util = {version = "^21.1.2", optional = true}

#Optional Dependencies Encryption

pynacl = {version = ">=1.4.0, <2", optional = true}

#Optional Dependencies Google

apache-libcloud = {version = ">=2.2.1, <3", optional = true}
google-cloud-storage = {version = "==1.6.0", optional = true}

#Optional Dependencies Htcondor

htcondor = {version = "8.6.0, <9", optional = true}

#Optional Dependenciess Kubernetes

kubernetes = {version = ">=12.0.1, <=19", optional = true}
idna = {version = ">=2", optional = true}

#Optional Dependencies Mesos

pymesos = {version = ">=0.3.15, <0.4", optional = true}

#Optional Dependencies WDL

wdlparse = {version = "==0.1.0", optional = true}

[tool.poetry.dev-dependencies]
mock = ">=4.0.3, <5"
pytest = ">=6.2.1, <7"
pytest-cov = ">=2.12.1, <4"
pytest-timeout = ">=1.4.2, <3"
stubserver = ">=1.1, <2"
setuptools = ">=51.3.3"
Sphinx = ">=3.5.3"
cwltest = ">=2.2.20210901154959"
mypy = "==0.910"
types-requests = "^2.25.11"
types-setuptools = "^57.4.2"
types-boto = "^2.49.2"
flake8 = ">=3.8.4, <5"
flake8-bugbear = ">=20.11.1, <21"
black = "^21.9b0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
autoflake = "^1.4"
diff-cover = "^6.4.2"
lxml = "^4.6.3"
docutils = ">=0.16, <0.18"
pyupgrade = "^2.29.0"

#Entry Points

[tool.poetry.scripts]
toil = 'toil.utils.toilMain:main'
_toil_worker = 'toil.worker:main'
cwltoil = 'toil.cwl.cwltoil:cwltoil_was_removed [cwl]'
toil-cwl-runner = 'toil.cwl.cwltoil:main [cwl]'
toil-wdl-runner = 'toil.wdl.toilwdl:main'
_toil_mesos_executor = 'toil.batchSystems.mesos.executor:main [mesos]'
_toil_kubernetes_executor = 'toil.batchSystems.kubernetes:executor [kubernetes]'
import_version = 'toil.import_version:import_version'

[tool.poetry.extras]
aws = ["boto", "boto3", "boto3-stubs", "futures"]
cwl = ["cwltool", "galaxy-tool-util"]
encryption = ["pynacl"]
google = ["apache-libcloud", "google-cloud-storage"]
htcondor = ["htcondor"]
kubernetes = ["kubernetes", "idna"]
mesos = ["pymesos"]
wdl = ["wdlparse"]
all = ["boto", "boto3", "boto3-stubs", "futures", 
        "cwltool", "galaxy-tool-util", "pynacl", 
        "apache-libcloud", "google-cloud-storage",
        "kubernetes", "idna", "pymesos", "wdlparse"]

[build-system]
#requires = ["setuptools", "wheel"]
requires = ["poetry-core>=1.0.0", "setuptools"]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
#script = "import_version.py"


