[metadata]
name = toil-cwl-runner
version = 1.0
description = Pipeline management software for clusters using CWL.
maintainer = The Toil Community
maintainer_email = toil-community@googlegroups.com
long_description = file: README.rst
long_description_content_type = text/x-rst 
url = https://github.com/DataBiosphere/toil
# no classifers, we aren't trying to get discovered, nor draw attention
# away from the toil package
license = Apache License v2.0

[options]
python_requires = >=3.6
install_requires =
    toil[cwl]
